--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,18 @@
         </title>
     </head>
     <body>
+
+        <!-- <header>
+            Page header
+        </header> include partial no -->
+
+        <%- include('_header'); %>
+
         <h1>SocialU <%=title%> </h1>
+        
+        <%- include('_footer.ejs'); %>
+        <!-- <footer>
+            Page footer
+        </footer> include partial no-->
     </body>
 </html>
