--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,5 @@
-
+        <link rel="stylesheet" href="/css/user_profile.css">
+        <!-- so this link tag if floating in body no, to place it in head
+        tell express to extract style and script and place them in head & in the end of body no
+        -->
         <h1>SocialU <%=title%> </h1>
