--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,8 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="/css/layout.css">
+        <%- style %>
     </head>
     <body>
 
@@ -16,10 +18,11 @@
          -->
 
          <%- body %>
-         
+
         <%- include('_footer.ejs'); %>
         <!-- <footer>
             Page footer
         </footer> include partial no-->
+        <%- script %>
     </body>
 </html>
