--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,4 +1,6 @@
-body{
-    background-color: yellow;
-    margin:0;
-}
+body {
+  margin: 0;
+  /* text-align: center; */
+  background-color: yellow; }
+  body #layout-main {
+    height: 100%; }
