--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,17 +9,31 @@ so this link tag isfloating in body no, to place it in head
 
 <section id="feed-posts">
         <h4>Posts</h4>
+        <% if(locals.user) {%>
         <form action="/posts/create" id="new-post-form" method="POST">
                 <textarea name="content" rows="3" cols="30" placeholder="type here..."></textarea>
                 <input type="submit" value="POST"> 
         </form>
+        <%}%>
         <div id="posts-list-container">
                 <ul>
                         <% for (post of posts) {%>
                                 <li> 
+                                        <p>
                                         <%= post.content %>
                                         <br>
                                         <small><%= post.user.name %></small>
+                                        </p>
+
+                                        <div class="post-comments">
+                                                <% if (locals.user) {%>
+                                                        <form action="/comments/create" method="POST">
+                                                                <input type="text" name="content" placeholder="Type here to add comment..">
+                                                                <input type="hidden" name="post" value="<%= post._id %>">
+                                                                <input type="submit" value="Add comment">
+                                                        </form>
+                                                <%}%>
+                                        </div>
                                 </li>
                         <% } %>
                 </ul>
