--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@ so this link tag isfloating in body no, to place it in head
         <h4>Posts</h4>
         <% if(locals.user) {%>
         <form action="/posts/create" id="new-post-form" method="POST">
-                <textarea name="content" rows="3" cols="30" placeholder="type here..."></textarea>
+                <textarea name="content" rows="3" cols="30" placeholder="type here..." required></textarea>
                 <input type="submit" value="POST"> 
         </form>
         <%}%>
@@ -28,11 +28,23 @@ so this link tag isfloating in body no, to place it in head
                                         <div class="post-comments">
                                                 <% if (locals.user) {%>
                                                         <form action="/comments/create" method="POST">
-                                                                <input type="text" name="content" placeholder="Type here to add comment..">
+                                                                <input type="text" name="content" placeholder="Type here to add comment.." required>
                                                                 <input type="hidden" name="post" value="<%= post._id %>">
                                                                 <input type="submit" value="Add comment">
                                                         </form>
                                                 <%}%>
+
+                                                <div class="post-comments-list">
+                                                        <ul id="post-comment-<%= post._id%>">
+                                                                <% for (comment of post.comments) {%>
+                                                                        <p> <%=comment.content %></p>
+                                                                        
+                                                                        <small>
+                                                                               <%= comment.user.email %> 
+                                                                        </small>
+                                                                <% } %>
+                                                        </ul>
+                                                </div>
                                         </div>
                                 </li>
                         <% } %>
