--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,11 @@ so this link tag isfloating in body no, to place it in head
                 <ul>
                         <% for (post of posts) {%>
                                 <li> 
+                                        <% if(locals.user && locals.user.id == post.user.id ) {%>
+                                        <small>
+                                        <a href="/posts/destroy/<%= post.id %>">X</a>
+                                        </small>
+                                        <% } %>
                                         <p>
                                         <%= post.content %>
                                         <br>
