--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,12 +42,22 @@ so this link tag isfloating in body no, to place it in head
                                                 <div class="post-comments-list">
                                                         <ul id="post-comment-<%= post._id%>">
                                                                 <% for (comment of post.comments) {%>
-                                                                        <p> <%=comment.content %></p>
+                                                                        <li>
+                                                                        <p> 
+                                                                                <% if(locals.user && locals.user.id == comment.user.id ) {%>
+                                                                                <small>
+                                                                                <a href="/comments/destroy/<%= comment.id %>">X</a>
+                                                                                </small>
+                                                                                <% } %>
+                                                                                <%=comment.content %>
+                                                                        </p>
                                                                         
                                                                         <small>
                                                                                <%= comment.user.email %> 
                                                                         </small>
+                                                                        </li>
                                                                 <% } %>
+
                                                         </ul>
                                                 </div>
                                         </div>
