--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,50 +18,7 @@ so this link tag isfloating in body no, to place it in head
         <div id="posts-list-container">
                 <ul>
                         <% for (post of posts) {%>
-                                <li> 
-                                        <% if(locals.user && locals.user.id == post.user.id ) {%>
-                                        <small>
-                                        <a href="/posts/destroy/<%= post.id %>">X</a>
-                                        </small>
-                                        <% } %>
-                                        <p>
-                                        <%= post.content %>
-                                        <br>
-                                        <small><%= post.user.name %></small>
-                                        </p>
-
-                                        <div class="post-comments">
-                                                <% if (locals.user) {%>
-                                                        <form action="/comments/create" method="POST">
-                                                                <input type="text" name="content" placeholder="Type here to add comment.." required>
-                                                                <input type="hidden" name="post" value="<%= post._id %>">
-                                                                <input type="submit" value="Add comment">
-                                                        </form>
-                                                <%}%>
-
-                                                <div class="post-comments-list">
-                                                        <ul id="post-comment-<%= post._id%>">
-                                                                <% for (comment of post.comments) {%>
-                                                                        <li>
-                                                                        <p> 
-                                                                                <% if(locals.user && locals.user.id == comment.user.id ) {%>
-                                                                                <small>
-                                                                                <a href="/comments/destroy/<%= comment.id %>">X</a>
-                                                                                </small>
-                                                                                <% } %>
-                                                                                <%=comment.content %>
-                                                                        </p>
-                                                                        
-                                                                        <small>
-                                                                               <%= comment.user.email %> 
-                                                                        </small>
-                                                                        </li>
-                                                                <% } %>
-
-                                                        </ul>
-                                                </div>
-                                        </div>
-                                </li>
+                                <%- include('_post') -%>
                         <% } %>
                 </ul>
         </div>
