+user profile links

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,3 +23,10 @@ so this link tag isfloating in body no, to place it in head
                 </ul>
         </div>
 </section>
+
+<section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users) { %>
+                <p> <a href="/users/profile/<%= u.id %>"> <%= u.name %> </a></p>
+        <% } %>
+</section>
