--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,4 @@
 <h1> <%=title%> </h1>
 
-<p> Name: <%= user.name%></p>
-<p> Email: <%= user.email%></p>
+<p> Name: <%= profile_user.name%></p>
+<p> Email: <%= profile_user.email%></p>
