--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,14 @@
 <h1> <%=title%> </h1>
 
-<p> Name: <%= profile_user.name%></p>
-<p> Email: <%= profile_user.email%></p>
+
+
+<% if(user.id==profile_user.id) {%>
+    <form action="/users/update/<%= profile_user.id %>" method="POST">
+        <input type="text" name="name" placeholder="Your name" value="<%= profile_user.name %>" required>
+        <input type="email" name="email" placeholder="Your email" value="<%= profile_user.email %>" required>
+        <input type="submit" value="Update">
+    </form>
+<% } else {%>
+    <p> Name: <%= profile_user.name%></p>
+    <p> Email: <%= profile_user.email%></p>
+<% } %>
