--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,12 @@
-<link rel="stylesheet" href="/css/user_profile.css">
+<link rel="stylesheet" href="/css/home.css">
 <% if(false) {%>
 //comment
 so this link tag isfloating in body no, to place it in head
 //tell express to extract style and script and place them in head & in the end of body no
 <%}%>
 
-<h1>SocialU <%=title%> </h1>
 
+<div id="home-container">
 <section id="feed-posts">
         <h4>Posts</h4>
         <% if(locals.user) {%>
@@ -30,3 +30,4 @@ so this link tag isfloating in body no, to place it in head
                 <p> <a href="/users/profile/<%= u.id %>"> <%= u.name %> </a></p>
         <% } %>
 </section>
+</div>
